# weight_weight_dont_tell_me

./: .gitignore  .gitmodules  README.md  datasets_loader.py  deepseek_modules.txt  eval_sample.sh  expert_stats.py  main.py  moe_eval.py  moe_model_metadata.json  moe_tracing.py  pipeline.py  pyproject.toml  run_lm_eval.py  trace_all_models.py  visualize_moe_routing.py
clustering/: clustering_experts.py
configs/: bit_assign.yaml  moe_model_metadata.json
eval/: eval_sample.sh  eval_usage_aware_quantized.py  moe_eval.py  run_eval.sh  run_eval_gcp.sh  run_eval_gsm8k.sh  run_eval_hs_q.sh  run_lm_eval.py
pruning_example/: modifier_by_layer.py  modify_generalized.py
quantization/: build_bitdict.py  calibration_inspector.py  usage_assign.py  usage_aware_quantization.py
results_gsm8k/: 35286923_metrics.json
tracing/: moe_tracing.py
utils/: datasets_loader.py
