[project]
name = "weight-weight-dont-tell-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "bitsandbytes>=0.43.2",
    "lm-eval>=0.4.9",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
[tool.pyright]
typeCheckingMode = "off"
